--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="main wrapper">
 	        <header>
 	        	<h2>product designer @ fueled</h2>
-	            <h1>tomgraham.me</h1>
+				<div class="faceyboi"></div><h1>tomgraham.me</h1>
 	        </header>
 	        <section>
 	        	<p>I’ve worked on dozens of projects of all sizes and budgets, from tiny startups you haven’t heard of, to giants like <strong>Rite Aid</strong>, <strong>Owners.com</strong>, and <strong>Verizon</strong>.</p> 
