Update social link destinations

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 	        </section>
 	        <footer>
 	            <ul class="social">
-					<a href="http://www.tasklogue.com"><li class="tasklogue">tasklogue</li></a>
-					<a href="mailto:hello@tomgraham.me"><li class="email">email</li></a>
+					<a href="http://tasklogue.com"><li class="tasklogue">tasklogue</li></a>
+					<a href="mailto:hello.i.am.speaking.to.you.from.your.internet.website@tomgraham.me"><li class="email">email</li></a>
 					<a href="http://www.dribbble.com/tmgrhm"><li class="dribbble">dribbble</li></a>
-	        		<a href="http://www.tasklogue.com"><li class="instagram">instagram</li></a>
+	        		<a href="https://www.instagram.com/tmgrhm"><li class="instagram">instagram</li></a>
 					<a href="https://www.twitter.com/tmgrhm"><li class="twitter">twitter</li></a>
 	        	</ul>
 	        </footer>
