Remembered some other things I can do

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	        </header>
 	        <section>
 	        	<p>I’ve worked on dozens of projects of all sizes and budgets, from tiny startups you haven’t heard of, to giants like <strong>Rite Aid</strong>, <strong>Owners.com</strong>, and <strong>Verizon</strong>.</p> 
-	            <p>I’m an all-round product designer, covering <strong>UI</strong>, <strong>interactions</strong>, <strong>animations</strong>, <strong>icons</strong>, <strong>3D</strong>, <strong>marketing assets</strong>, <strong>product direction</strong>, and more.</p>
+				<p>I’m an all-round product designer, covering <strong>UI</strong>, <strong>wireframes</strong>, <strong>prototypes</strong>, <strong>interactions</strong>, <strong>animations</strong>, <strong>icons</strong>, <strong>3D</strong>, <strong>marketing assets</strong>, <strong>product direction</strong>, and more.</p>
 	            <p>I specialise in <strong>iPhone apps</strong> but I’ve designed for <strong>Android</strong>, <strong>responsive web</strong>, <strong>iPad</strong>, <strong>watchOS</strong>, <strong>macOS</strong>, <strong>tvOS</strong>, and <strong>Android Wear</strong>. I’m a big fan of both the iOS HIG and Material Design. I do most of my work in <strong>Sketch</strong>, <strong>Principle</strong>, <strong>After Effects</strong>, and <strong>Xcode</strong>.</p>
 	        </section>
 	        <footer>
