--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
 		<div class="main wrapper">
 	        <header>
-	        	<h2>product designer @ fueled</h2>
+	        	<h2>product designer @ <a href="https://fueled.com">fueled</a></h2>
 				<div class="faceyboi"></div><h1>tomgraham.me</h1>
 	        </header>
 	        <section>
