--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Tom Graham</title>
+        <title>tomgraham.me</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<link rel='stylesheet' href='css/main.css'>
 		<script src='js/vendor/modernizr-2.6.2.min.js'></script>
     </head>
-    <body>
+    <body class="home">
 		<div class="main wrapper">
 	        <header>
-	        	<h2>product designer @ <a href="https://fueled.com">fueled</a></h2>
+	        	<h2>product designer @ <a class="fueled" href="https://fueled.com">fueled</a></h2>
 				<div class="faceyboi"></div><h1>tomgraham.me</h1>
 	        </header>
 	        <section>
@@ -23,17 +23,14 @@
 	        </section>
 	        <footer>
 	            <ul class="social">
-					<a href="http://tasklogue.com"><li class="tasklogue">tasklogue</li></a>
-					<a href="mailto:hello.i.am.speaking.to.you.from.your.internet.website@tomgraham.me"><li class="email">email</li></a>
-					<a href="https://www.dribbble.com/tmgrhm"><li class="dribbble">dribbble</li></a>
-	        		<a href="https://www.instagram.com/tmgrhm"><li class="instagram">instagram</li></a>
-					<a href="https://www.twitter.com/tmgrhm"><li class="twitter">twitter</li></a>
+					<a href="http://tasklogue.com"><li id="tasklogue">tasklogue</li></a>
+					<a href="mailto:hello.i.am.speaking.to.you.from.your.internet.website@tomgraham.me"><li id="email">email</li></a>
+					<a href="https://www.dribbble.com/tmgrhm"><li id="dribbble">dribbble</li></a>
+	        		<a href="https://www.instagram.com/tmgrhm"><li id="instagram">instagram</li></a>
+					<a href="https://www.twitter.com/tmgrhm"><li id="twitter">twitter</li></a>
+					<a href="/cv.html"><li id="cv">CV</li></a>
 	        	</ul>
 	        </footer>
 		</div>
-		
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src='js/main.js'></script>
     </body>
 </html>
