faceyboi → link to index

--- a/cv.html
+++ b/cv.html
@@ -14,7 +14,8 @@
 		<div class="main wrapper">
 	        <header>
 				<h2>product designer</h2>
-				<div class="faceyboi"></div><h1>Tom Graham</h1>
+				<a href="/"><div class="faceyboi"></div></a>
+				<h1>Tom Graham</h1>
 	        </header>
 			
 			<section class="experience">
