--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 		<div class="main wrapper">
 	        <header>
 	        	<h2>product designer @ <a class="fueled" href="https://fueled.com">fueled</a></h2>
-				<div class="faceyboi"></div><h1>tomgraham.me</h1>
+				<a href="/"><div class="faceyboi"></div></a>
+				<h1>tomgraham.me</h1>
 	        </header>
 	        <section>
 				<p>I’m an all-round product designer, covering <strong>UI</strong>, <strong>wireframes</strong>, <strong>prototypes</strong>, <strong>interactions</strong>, <strong>animations</strong>, <strong>icons</strong>, <strong>3D</strong>, <strong>marketing assets</strong>, <strong>product direction</strong>, and more.</p>
