Tweak contact icons
Email from pink → purple

--- a/cv.html
+++ b/cv.html
@@ -1,4 +1,4 @@
-	<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -14,7 +14,7 @@
 		<div class="main wrapper">
 	        <header>
 				<h2>product designer</h2>
-				<a href="/"><div class="faceyboi"></div></a>
+				<a href="./"><div class="faceyboi"></div></a>
 				<h1>Tom Graham</h1>
 	        </header>
 			
@@ -23,7 +23,7 @@
 				<h2>July 2013 – present</h2>
 				<h3>Intern&nbsp;Designer → Junior&nbsp;UI&nbsp;Designer → UI&nbsp;Designer → Product&nbsp;Designer</h3>
 				<h2><a class="fueled" href="https://fueled.com">Fueled</a></h2> 
-				<p>In my time at Fueled I've learned an incredible amount and grown into a very capable product designer, working with dozens of startups and big brands to create compelling, successful, award-winning apps.</p>
+				<p>In my time at Fueled I've learned an incredible amount and grown into a capable and rounded product designer, working with dozens of startups and big brands to create compelling, user-focused apps.</p>
 				
 				<section>
 					<h5>Example Clients &amp; Brands</h5>
@@ -47,14 +47,15 @@
 					<h2>2010 – 2013</h2>
 					<h3>Higher National Diploma in Computer&nbsp;Science</h3>
 					<h2>Aberystwyth University</h2>		
-				<p>The third year of my four-year BSc course was a year in industry. I used this as an opportunity to try my hand at professional design work at Fueled.</p> 
-				<p>Despite being on course to achieve a BSc with First-class honours, I first deferred my return to university, then chose not to return at all, having enjoyed and learned so much in my time at Fueled.</p>
-				<p>Received a Merit Award and personal grant from the university as a result of performance in an entrance exam.</p>
-<!--					<li>
+				<p>The third year of my four-year BSc course was a year in industry. I used this as an opportunity to test myself as a professional designer.</p> 
+				<p>Despite being on course to achieve a BSc with First-class honours I deferred my return to university. Having enjoyed and learnt so much in my time at Fueled, I decided to leave university to continue a career in UI Design.</p>
+				<p><small>Received a <em>Merit Award</em> from the university for performance in an entrance exam.</small></p>
+					<!--<li>
 						<h4>2003 – 2010</h4>
 						<h3>Caistor Grammar School</h3> 
 						<h4><small>A-Level</small> 1 A, 1B, 2Cs</h4>
 						<h4><small>GCSE</small> 1 A, 1B, 2Cs</h4>
+						<!- noone cares about a-levels and gcses -*>
 					</li>-->
 			</section>
 			
