--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="main wrapper">
 	        <header>
 	        	<h2>product designer @ <a class="fueled" href="https://fueled.com">fueled</a></h2>
-				<a href="/"><div class="faceyboi"></div></a>
+				<a href="./"><div class="faceyboi"></div></a>
 				<h1>tomgraham.me</h1>
 	        </header>
 	        <section>
@@ -24,12 +24,12 @@
 	        </section>
 	        <footer>
 	            <ul class="social">
-					<a href="http://tasklogue.com"><li id="tasklogue">tasklogue</li></a>
-					<a href="mailto:hello.i.am.speaking.to.you.from.your.internet.website@tomgraham.me"><li id="email">email</li></a>
 					<a href="https://www.dribbble.com/tmgrhm"><li id="dribbble">dribbble</li></a>
 	        		<a href="https://www.instagram.com/tmgrhm"><li id="instagram">instagram</li></a>
 					<a href="https://www.twitter.com/tmgrhm"><li id="twitter">twitter</li></a>
-					<a href="/cv.html"><li id="cv">CV</li></a>
+					<a href="mailto:hello.i.am.speaking.to.you.from.your.internet.website@tomgraham.me"><li id="email">email</li></a>
+					<a href="./cv.html"><li id="cv">CV</li></a>
+					<a href="http://tasklogue.com"><li id="tasklogue">tasklogue</li></a>
 	        	</ul>
 	        </footer>
 		</div>
