Add contact CTAs at end of CV

--- a/cv.html
+++ b/cv.html
@@ -118,15 +118,14 @@
 	        </section>
 			
 			
-			<footer>
-			    <ul class="social">
-					<a href="http://tasklogue.com"><li class="tasklogue">tasklogue</li></a>
-					<a href="mailto:hello.i.am.speaking.to.you.from.your.internet.website@tomgraham.me"><li class="email">email</li></a>
-					<a href="https://www.dribbble.com/tmgrhm"><li class="dribbble">dribbble</li></a>
-					<a href="https://www.instagram.com/tmgrhm"><li class="instagram">instagram</li></a>
-					<a href="https://www.twitter.com/tmgrhm"><li class="twitter">twitter</li></a>
-				</ul>
-			</footer>
+			<section id="CTA">
+				<h1>Let's talk</h1>
+				<div class="buttons">
+					<a class="button" id="email" href="mailto:hello.i.am.speaking.to.you.from.your.internet.website@tomgraham.me">Email</a>
+					<a class="button" id="dribbble" href="https://dribbble.com/tmgrhm">Dribbble</a>
+					<a class="button" id="twitter" href="https://twitter.com/tmgrhm">Twitter</a>
+				</div>
+			</section>
 		</div>
     </body>
 </html>
